[tool.poetry]
name = "ndl-crop"
version = "0.1.0"
description = "This is a script to crop scans of old photobooks from the NDL like those linked. It's written for Python 3 and uses OpenCV for the heavy lifting."
authors = ["Paul O'Leary McCann"]
readme = "README.md"
packages = [{include = "ndl-crop"}]

[tool.poetry.dependencies]
python = "^3.9"
argh = "0.26.2"
numpy = "1.22.4"
opencv-python = "4.6.0.66"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
